[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Di Wen <di@cointracker.com>"]
readme = "README.md"
packages = [{include = "flask_tutorial"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
